Enhance CORS configuration in SecurityConfig
- Updated SecurityConfig to allow all headers in CORS requests, improving flexibility for cross-origin interactions.
- Added a new CorsFilter bean to ensure CORS headers are applied to all responses, enhancing overall security and compliance with CORS standards.
- Consolidated comments for better clarity on the purpose of CORS settings.